Designs Coming Soon Toggle Button: Add class 'hide' to _base--display-and-visibility.scss and add 'hide' to the toggle-button__on for default. And, finally applied correct JS to toggle show/hide Milk/Dark by use of jQuery toggleClass('hide').

--- a/user/themes/bodigiti/style/scss/base/_base--display-and-visibility.scss
+++ b/user/themes/bodigiti/style/scss/base/_base--display-and-visibility.scss
@@ -1,4 +1,9 @@
 
+
+.hide {
+  display: none !important;
+}
+
 // 'visibility' Hides stuff without rendering it inaccessible in the DOM, wherease
 // 'display: none' both hides and renders content inaccessible in the DOM
 
